@@ -54,6 +54,8 @@ Version 1.7.8
        dialog. (Stefan)
 - BUG: Issue #346: crash diffing invalid
        icon files. (Stefan)
+- BUG: Issue #347: long paths crash
+       TortoiseBlame. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
